--- a/src-c/dune
+++ b/src-c/dune
@@ -3,12 +3,9 @@
  (public_name digestif.c)
  (implements  digestif)
  (libraries   stdlib-shims bigarray-compat eqaf digestif.rakia)
- (private_modules digestif_native
-                  digestif_hash
+ (private_modules digestif_hash
                   digestif_eq
-                  digestif_conv
-                  digestif_by
-                  digestif_bi)
+                  digestif_conv)
  (flags       (:standard -no-keep-locs)))
 
 (rule (copy# ../src/digestif_bi.ml   digestif_bi.ml))
