expose more modules used by git-object-store for now

--- a/src-c/dune
+++ b/src-c/dune
@@ -3,8 +3,7 @@
  (public_name digestif.c)
  (implements digestif)
  (libraries stdlib-shims bigarray-compat eqaf)
- (private_modules digestif_native digestif_eq digestif_conv digestif_by
-   digestif_bi)
+ (private_modules digestif_eq digestif_conv)
  (foreign_stubs
   (language c)
   (names blake2b blake2s md5 ripemd160 sha1 sha256 sha512 sha3 whirlpool misc
