--- a/src-c/dune
+++ b/src-c/dune
@@ -3,8 +3,7 @@
  (public_name digestif.c)
  (implements digestif)
  (libraries stdlib-shims bigarray-compat eqaf digestif.rakia)
- (private_modules digestif_native digestif_eq digestif_conv digestif_by
-   digestif_bi)
+ (private_modules digestif_eq digestif_conv)
  (flags
   (:standard -no-keep-locs)))
 
